<resources>
    <string name="app_name">taskmaster</string>
    <string name="helloWorld">Hello World</string>
    <string name="taskMaster">Task Master</string>
    <string name="done">done</string>
    <string name="allTasks">All Tasks</string>
    <string name="addATask">Add A Task</string>
    <string name="flowerInAPotSayingDone">Flower in a pot saying the word \"done\"</string>
    <string name="newTask">"New Task : "</string>
    <string name="newTask2">New Task:</string>
    <string name="add">Add</string>
    <string name="addTaskHint">Add Task</string>
    <string name="Submitted">Submitted!</string>
    <string name="description">Description:</string>
    <string name="descriptionNoColon">Description</string>
    <string name="submittedExclamation">Submitted!</string>
    <string name="settingsButton">Settings Button</string>
    <string name="lowerCaseDoneQuestionMark">done?</string>
    <string name="makeABudget">Make A Budget</string>
    <string name="learnFrench" />
    <string name="learnFrench2">Learn French</string>
    <string name="goForARun2">Go For A Run</string>
    <string name="learnFrench3">Learn French</string>
    <string name="watchYouPeople">Watch \"You People\"</string>
    <string name="taskDetails">Task Details</string>
    <string name="loremBlah">Lorem Ipsum blah, blah, blah</string>
    <string name="name2">Name</string>
    <string name="save">Save</string>
    <string name="inputUsernameHere">Input UserName Here</string>
    <string name="no_input">No Input</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="state">State:</string>
    <string name="team">Team</string>
    <string name="team2">Team!</string>
    <string name="teamSemiColon">Team:</string>
    <string name="chooseTeam">choose team</string>
</resources>