<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddTaskActivityNewTaskTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEDC58"
        tools:context=".AllTasks"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/AddTaskActivityNewTaskLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="224dp"
            android:text="@string/newTask2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/AddTaskActivityAddTaskEditTextBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/AddTaskActivityAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="204dp"
            android:backgroundTint="#269D31"
            android:onClick="@string/Submitted"
            android:text="@string/add"
            android:textColor="#212121"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/AddTaskActivityAddTaskEditTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:autofillHints="Add"
            android:ems="10"
            android:hint="@string/addTaskHint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#33691E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/AddTaskActivityNewTaskLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AddActivitySubmittedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submittedExclamation"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/AddTaskActivityAddButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityAddTaskEditTextBox"
            app:layout_constraintVertical_bias="0.805" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:hint="@string/descriptionNoColon"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#33691E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ActivityAddTaskDescriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityAddTaskEditTextBox" />

        <TextView
            android:id="@+id/ActivityAddTaskDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityNewTaskLogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>