<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDC58"
    android:clickable="true">

    <Button
        android:id="@+id/MainActivityAllTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#329B2F"
        android:text="@string/allTasks"
        android:textColor="#FFEE58"
        android:textStyle="bold"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/MainActivityAddATaskButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/MainActivityAddATaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#329C2F"
        android:text="@string/addATask"
        android:textColor="#FFF176"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/MainActivitySettingsButton"
        android:layout_width="54dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FEDC58"
        android:contentDescription="@string/settingsButton"
        android:foregroundTint="#760402"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        app:tint="#760402"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/MainActivityUserNameTextView"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/MainActivityFlowerLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/MainActivityFlowerLogo"
        android:layout_width="222dp"
        android:layout_height="230dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/flowerInAPotSayingDone"
        app:layout_constraintBottom_toTopOf="@+id/MainActivityRecyclerView"
        app:srcCompat="@drawable/tm_jpg"
        tools:layout_editor_absoluteX="94dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="40dp"
        android:layout_height="18dp"
        android:layout_marginBottom="124dp"
        android:text="@string/lowerCaseDoneQuestionMark"
        android:textColor="#827717"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/MainActivityFlowerLogo"
        app:layout_constraintEnd_toEndOf="@+id/MainActivityFlowerLogo"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="@+id/MainActivityFlowerLogo"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityRecyclerView"
        android:layout_width="322dp"
        android:layout_height="376dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/MainActivityAllTasksButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="MainActivityUserNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>